<?xml version="1.0"?>
<package format="2">
  <name>yolo_cpp</name>
  <version>0.0.0</version>
  <description>ToDo: Edit package description</description>

  <license>YOLO License</license>
  <maintainer email="ole.k.berger@t-online.de">Ole Berger</maintainer>
  <author email="ole.k.berger@t-online.de">Ole Berger</author>
  <url type="repository">git@github.com:oberger4711/yolo_cpp.git</url>

  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>gtest</test_depend>
  <depend>opencv</depend>
  <!--
    Documentation for dependencies:
    <build_depend>            Build-time dependency required to build
                              this package, e.g. boost, opencv.
    <build_export_depend>     Exported build-time dependency required to
                              build packages that depend on this package,
                              e.g. boost, opencv.
    <exec_depend>             Execution dependency required to run this
                              package, e.g. boost, opencv.
    <depend>                  Build-time, exported build-time and execution
                              dependency. This is a bundled synonym for
                              <build_depend>, <build_export_depend> and
                              <exec_depend>.
  -->
  <!--
    Example:
    <depend>mrt_opencv</depend>
  -->

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
